# object_detection_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml
address_database/scripts/: address_db.sh  logs.txt  test.sh
automation_pkgs/google_calendar_events/: Dockerfile  credentials.json  quickstart.py  token.json
env-hooks/: object_detection_simulation.sh.in
exp_scripts/python_scripts/: check_print.py  filename.py  json_parse.py  logger.py  path_creator.py  plotter.py  rclpy_node_template.py
ign/: gui.config
launch/: detect_and_move.launch.py  robot.launch.py  simulation.launch.py  world.launch.py
models/object/: object.config
models/robot/: robot.config  robot.sdf
object_detection_simulation/: CMakeLists.txt  README.md  package.xml
object_detection_simulation/ign/: gui.config
object_detection_simulation/launch/: detect_and_move.launch.py  robot.launch.py  simulation.launch.py
object_detection_simulation/models/object/: object.sdf
object_detection_simulation/models/robot/: robot.sdf
object_detection_simulation/rviz/: obj_detect.rviz
object_detection_simulation/scripts/: detection_node.py
object_detection_simulation/src/: teleop.cpp
rviz/: obj_detect.rviz
scripts/: detection_node.py  move_to_goal_node.py
shell_tools/: bash.sh  docker_mounted.sh  run_ouster_ros1_mounted.sh
worlds/: station.sdf
